--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,13 @@
+amplify-authenticator {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  height: 100vh;
+  background-color: #282c34;
+  --container-align: center;
+}
+
 .App {
   text-align: center;
 }
